SERVER-14797 simplify parallel.cpp, don't use empty docs as sentinels